src/assets/styles/block/_apply.scss
@use '/assets/styles/global/' as *;

.apply {
  text-align: center;
  background: linear-gradient(180deg, $main-color 0%, $main-color 50%, #111 50%, #111 100%);
  &__content {
    max-width: 90%;
    margin: 0 auto;
    padding: 40px 20px;
    background-color: #7e3f3e;
    @include mq-up(md) {
      padding: 70px 90px;
    }
  }
  &__title {
    padding-bottom: 40px;
    font-size: 20px;
    @include mq-up(md) {
      font-size: 32px;
    }
  }
  &__steps {
    flex-direction: column;
    display: flex;
    border-top: 1px solid #fff;
    &:last-of-type {
      margin-top: 40px;
    }
    @include mq-up(md) {
      flex-direction: row;
      align-items: center;
      padding: 40px 0;
      border-bottom: 1px solid #fff;
      gap: 32px;
      &:last-of-type {
        margin-top: 0;
        border-top: none;
      }
    }
  }
  &__step-wrap {
    @include mq-up(md) {
      flex: calc(100% - 170px) 1 1;
    }
  }
  &__step {
    padding: 40px 0 0;
    @include mq-up(md) {
      align-items: center;
      display: flex;
      padding-top: 0;
      &:first-child {
        margin-top: 0;
      }
      &:last-child {
        border-top: 1px solid #fff;
        @include mq-up(md) {
          margin-top: 32px;
          border: none;
        }
      }
    }
  }
  &__heading {
    padding: 0.5em 0;
    font-size: 24px;
    border-bottom: 1px solid #fff;
    @include mq-up(md) {
      flex: 180px 0 0;
      padding-top: 1em;
      padding-right: 1em;
      padding-bottom: 1em;
      border: none;
      border-right: 1px solid #fff;
    }
  }
  &__sub-heading {
    display: inline-block;
    padding: 0 0.5em;
    font-size: 20px;
    color: $main-color;
    background-color: #fff;
    @include mq-up(md) {
      flex: 100px 0 0;
      margin-right: 1em;
    }
  }
  &__detail {
    margin-top: 20px;
    @include mq-up(md) {
      margin-top: 0;
    }
  }
  .button {
    margin-top: 60px;
    &:before {
      content: '';
      display: inline-block;
      width: 22px;
      height: 22px;
      margin-right: 0.8em;
      background-image: url('/public/images/sp/twitter-icon.png');
      background-repeat: no-repeat;
    }
    @include mq-up(md) {
      max-width: 560px;
      margin-top: 70px;
      margin-right: auto;
      margin-left: auto;
      font-size: 24px;
    }
  }
}

